syntax = "proto3";

option go_package = "github.com/tnyim/jungletv/proto";

package jungletv;

enum UserRole {
    MODERATOR = 0;
    TIER_1_REQUESTER = 1;
    TIER_2_REQUESTER = 2;
    TIER_3_REQUESTER = 3;
    CURRENT_ENTRY_REQUESTER = 4;
    VIP = 5;
    APPLICATION = 6;
}

enum UserStatus {
    USER_STATUS_OFFLINE = 0;
    USER_STATUS_WATCHING = 1;
    USER_STATUS_AWAY = 2;
}

message User {
    string address = 1;
    repeated UserRole roles = 2;
    optional string nickname = 3;
    UserStatus status = 4;
}

message PaginationParameters {
    uint64 offset = 1;
    uint64 limit = 2;
}
